叮咚农场养鱼

--- a/Cookie.conf
+++ b/Cookie.conf
@@ -291,3 +291,6 @@ http-request ^https?:\/\/mapi.xmcimg.com\/bbs\/memcp.php\?action script-path=htt
 
 # > qq会员成长值签到 (By @lowking0415)
 http-request ^https:\/\/proxy.vac.qq.com\/cgi-bin\/srfentry.fcgi script-path=https://raw.githubusercontent.com/lowking/Scripts/master/QQVip/qqVipCheckIn.js, tag=qq会员成长值
+
+# > 叮咚农场养鱼 (By @iepngs)
+http-request ^https:\/\/maicai\.api\.ddxq\.mobi\/user\/checkLogin script-path=https://raw.githubusercontent.com/iepngs/Script/master/dingdong/index.js,tag=叮咚农场
