--- a/Cookie.conf
+++ b/Cookie.conf
@@ -375,3 +375,6 @@ http-request ^https:\/\/exp.angelalign.com\/api\/v1\/mini_program\/get_plan_list
 
 # > nga刮墙 (by chouchoui)
 http-request ^https:\/\/ngabbs.com\/nuke.php\?? script-path=https://raw.githubusercontent.com/chouchoui/QuanX/master/Scripts/nga/nga.cookie.js, requires-body=true
+
+# > 达美乐
+http-request ^https?:\/\/dominos0724\.shjimang\.com\/Ajax\/GetSmsCode requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Domino/Domino_getSMS.js
