--- a/Task.conf
+++ b/Task.conf
@@ -575,3 +575,6 @@ cron "30 8,13,19 * * *" script-path=https://raw.githubusercontent.com/chouchoui/
 # > NGA刮墙 (by chouchoui)
 # 杀掉NGA后台并重新打开NGA，提示Cookie获取成功
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chouchoui/QuanX/master/Scripts/nga/nga.js, tag=NGA刮墙
+
+# > 达美乐
+cron "0 1 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Domino/Domino_getSMS.js
