乐心运动自动版

--- a/Task.conf
+++ b/Task.conf
@@ -553,6 +553,9 @@ cron "0 0 0 * * *" script-path=https://raw.githubusercontent.com/lowking/Scripts
 # 叮咚买菜App - 右下角"我的"- 叮咚农场
 cron "1 8,12,17 * * *" script-path=https://raw.githubusercontent.com/iepngs/Script/master/dingdong/index.js,tag=叮咚农场养鱼
 
+# > 乐心运动(By iepngs)
+cron "16 9 * * *" script-path=https://raw.githubusercontent.com/iepngs/Script/master/lxhealth/index.js,tag=乐心运动
+
 # > 惠头条签(By 红鲤鱼与绿鲤鱼与驴)
 # 作者的邀请码:53150681 
 # nzw9314邀请码: 12773106
